# kenna-cms

./: .gitignore  main.py  pyproject.toml
src/kennapartner_backend/: __init__.py
src/kennapartner_backend/dependencies/: __init__.py  file_validation.py  jwt_verification.py
src/kennapartner_backend/helpers/: __init__.py  token_generator.py
src/kennapartner_backend/modules/: __init__.py
src/kennapartner_backend/modules/article/: model.py
src/kennapartner_backend/modules/authentication/: __init__.py  model.py  route.py
src/kennapartner_backend/modules/book/: __init__.py  model.py  route.py  schema.py
src/kennapartner_backend/modules/insight/: __init__.py  model.py  route.py  schema.py
src/kennapartner_backend/modules/news/: __init__.py  model.py  route.py  schema.py
src/kennapartner_backend/services/: __init__.py
src/kennapartner_backend/services/upload/: __init__.py  cloudinary.py
src/kennapartner_backend/utils/: database.py  seed.py
